Week-1/week1_auto_scaling_group.cfn.yml
Description: Second home task. A template for creating auto scaling group via launch template.

Parameters:
  EC2InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium

  ImageId:
    Description: EC2 instance image id
    Type: String
    Default: ami-0c2d06d50ce30b442

  KeyName:
    Description: ec2 key name
    Type: String
    Default: default-key-pair

Resources:
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${AWS::StackName}-ssh-security-group'
      GroupDescription: security group for ssh access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  
  HTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${AWS::StackName}-http-security-group'
      GroupDescription: security group for http access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub '${AWS::StackName}-launch-template-for-auto-scaling'
      LaunchTemplateData:
        ImageId: !Ref ImageId
        InstanceType: !Ref EC2InstanceType
        UserData: "IyEvYmluL2Jhc2gKc3VkbyB5dW0gdXBkYXRlIC15CnN1ZG8geXVtIGluc3RhbGwgLXkgamF2YS0xLjguMC1vcGVuamRr"
        KeyName: !Ref KeyName
        SecurityGroups:
          - !Ref SSHSecurityGroup
          - !Ref HTTPSecurityGroup

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones:
        Fn::GetAZs:
          Ref: "AWS::Region"
      MaxSize: 3
      MinSize: 2
      DesiredCapacity: 2
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: true
